assets/stylesheets/organizations.css
.icon-organizations, #admin-menu a.organizations { background-image: url(../images/building.png); }
tr.organization.direction td.name, tr.organization.direction td.description { font-weight:bold; }
tr.organization.idnt td.name a {background: url(../../../images/arrow_right.png) no-repeat 0 50%; padding-left: 16px;}
p.idnt { margin:0; }
tr.organization.idnt-1 td.name, p.idnt-1 {padding-left: 0.5em;}
tr.organization.idnt-2 td.name, p.idnt-2 {padding-left: 2em;}
tr.organization.idnt-3 td.name, p.idnt-3 {padding-left: 3.5em;}
tr.organization.idnt-4 td.name, p.idnt-4 {padding-left: 5em;}
tr.organization.idnt-5 td.name, p.idnt-5 {padding-left: 6.5em;}
tr.organization.idnt-6 td.name, p.idnt-6 {padding-left: 8em;}
tr.organization.idnt-7 td.name, p.idnt-7 {padding-left: 9.5em;}
tr.organization.idnt-8 td.name, p.idnt-8 {padding-left: 11em;}
tr.organization.idnt-9 td.name, p.idnt-9 {padding-left: 12.5em;}
div.members span.organization-members { font-size:90%; }
div.right { float:right; }
table.memberships .buttons .icon-edit { display:none; }
.organization .description {font-size: 1em; font-weight: bold;}
.organization .tab-content ul { padding-left:25px; }
.organization .tab-content ul.sublist { margin-bottom: 0.4em }
.organization .tab-content li { padding:2px 5px; }
.organization .tab-content .members, .organization .tab-content .functions { text-align: left; }
.organization .tab-content th.members, .organization .tab-content th.functions {padding-left: 35px;}
.organization .tab-content .members li, .organization .tab-content .functions li { list-style: none; }
.organization .tab-content .functions td, .organization .tab-content .functions th {border-bottom: 1px lightgrey solid;}
.organization .tab-content li .manager, .organization li .team-leader {margin: 0 2px -2px 3px;}
.selected-organization { background-color:#f3f6fe; padding:4px 7px !important; border-radius:4px; list-style-type: none;}
.organizations .buttons { width:160px !important; }
.organizations .organization { width:220px; }
.organizations .role { min-width:180px; }
.organizations .roles_checkboxes { width:190px; }
table.list.organizations td {text-align:left;vertical-align: top;padding-left: 23px;width: 25%;}
table.list.organizations td.icon-group {background-position: 0% 5px;}
table.list.organizations .undefined{color: #d3d3d3;font-style: italic;}
.list.members .buttons { text-align:left; }
table.members td.group { background-position: 0 4px; }


table.list.organizations td.hidden {display: none;}

#principals_for_new_member {min-height: 20px;}
#principals_for_new_member.ajax-loading {background:url(../images/loading.gif) no-repeat center top;}

.objects-selection>div#organizations {
    column-width: 300px;
    -webkit-column-width: 300px;
    -moz-column-width: 300px;
}

.managers.hidden, .team_leaders.hidden {display: none;}
.badge { font-size:9px; text-transform:uppercase; padding:1px 2px; position:relative; bottom:2px;
    border-radius:2px; font-weight:bold; display:inline-block; }
.manager-red-badge { color:#fff; background:#c22; text-shadow:1px 1px 2px #711; }
.manager-green-badge { color:#fff; background:#2a6; text-shadow:1px 1px 2px #171; }
.manager-badge { color:#fff; background:#74a; text-shadow:1px 1px 2px #117; }
.team-leader-badge { color:#FFFFFF; background:#59A01C; text-shadow:1px 1px 2px #171 !important; }

textarea#organization_description{
    font-size: 12px;
    font-family: "Lucida Grande", verdana, arial, helvetica, sans-serif;
    padding: 4px;
}

.orga-select2{
    width: 350px;
}

#tab-content-managers .splitcontentleft {width: 64%;}
#tab-content-managers .splitcontentright {width: 34%;}
#tab-content-managers fieldset {padding:1em; margin-bottom: 1em;}
#tab-content-managers fieldset label {display: block;}
#tab-content-managers #principals {max-height: 400px; overflow: auto;}
input#manager_search {width:90%}

